// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateStudioSubHeader tests should match snapshot 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="template-studio-sub-header-left-view-mock"
      />
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <span
                class="bp3-popover-wrapper main"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                      data-icon="send-data"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 9 12"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3.533 5.013L2.279 6.301a.653.653 0 01-.94 0 .696.696 0 010-.966l2.394-2.46a.655.655 0 01.94 0l2.394 2.46c.127.13.194.302.194.48a.7.7 0 01-.194.48.655.655 0 01-.94 0l-1.26-1.282v5.94c0 .377-.3.686-.668.686a.678.678 0 01-.666-.685v-5.94z"
                          fill="#25A6F7"
                        />
                        <path
                          d="M.5.775h7.005v.2H.5v-.2z"
                          stroke="#25A6F7"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      save
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.discard
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateStudioSubHeader tests should match snapshot in read only mode 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="template-studio-sub-header-left-view-mock"
      />
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <span
                class="bp3-icon bp3-icon-eye-open StyledProps--main StyledProps--color StyledProps--color-orange800"
                icon="eye-open"
              >
                <svg
                  data-icon="eye-open"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    eye-open
                  </desc>
                  <path
                    d="M8.002 7.003a1.003 1.003 0 000 2.005 1.003 1.003 0 000-2.005zm7.988.972v-.02-.01-.02-.02a.675.675 0 00-.17-.36c-.509-.673-1.118-1.264-1.737-1.806-1.328-1.173-2.846-2.155-4.523-2.546a6.702 6.702 0 00-2.925-.06c-.889.18-1.738.541-2.546.992C2.84 4.837 1.692 5.81.694 6.902c-.18.211-.36.411-.53.632a.742.742 0 000 .932c.51.672 1.119 1.264 1.738 1.805 1.328 1.173 2.846 2.156 4.523 2.547.968.23 1.947.24 2.925.04.889-.18 1.738-.542 2.546-.993 1.248-.712 2.397-1.684 3.395-2.777.18-.2.37-.411.54-.632.09-.1.149-.23.169-.36v-.02-.02-.01-.02-.03c0-.01-.01-.01-.01-.02zm-7.988 3.038a2.998 2.998 0 01-2.995-3.008 2.998 2.998 0 012.995-3.008 2.998 2.998 0 012.996 3.008 2.998 2.998 0 01-2.996 3.008z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-size-small"
              >
                common.readonlyPermissions
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateStudioSubHeader tests should match snapshot when template is updated 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="template-studio-sub-header-left-view-mock"
      />
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <p
            class="StyledProps--font StyledProps--main tagRender StyledProps--color StyledProps--color-orange600 StyledProps--font-size-small"
          >
            unsavedChanges
          </p>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <span
                class="bp3-popover-wrapper main"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                      data-icon="send-data"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 9 12"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3.533 5.013L2.279 6.301a.653.653 0 01-.94 0 .696.696 0 010-.966l2.394-2.46a.655.655 0 01.94 0l2.394 2.46c.127.13.194.302.194.48a.7.7 0 01-.194.48.655.655 0 01-.94 0l-1.26-1.282v5.94c0 .377-.3.686-.668.686a.678.678 0 01-.666-.685v-5.94z"
                          fill="#25A6F7"
                        />
                        <path
                          d="M.5.775h7.005v.2H.5v-.2z"
                          stroke="#25A6F7"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      save
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.discard
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
